[package]
name = "wasm-starter"
version = "0.1.0"
authors = ["Adam Kelly <adamkelly2201@gmail.com>"]
license = "MIT"
description = "A Rust Based WebAssembly NPM Module Starter"
repository = "https://github.com/adamisntdead/wasm-starter"


[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
